--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
         </div>
       </section>
       <section id="projects">
+        <h2 class="subtitle">Mes projets</h2>
+        <div class="project-container">
         <article class="project-card">
           <h2>Blink182-fr</h2>
           <p>"Blink-182-fr" est un site réalisé sur un groupe de musique.
@@ -104,10 +106,14 @@
             La recherche de photos s'effectue par date, il suffit de sélectionner une date pour que le site affiche l'ensemble des photos transmises par le robot à la date choisie.</p>
           <iframe src="https://mars-pictures.web.app/" class="project-preview"></iframe>
           <a href="https://mars-pictures.web.app/" ><button class="cta">Voir le projet</button></a>
-        </article>
+        </article></div>
       </section>
       <section id="contact">
-        <div></div>
+        <h2 class="subtitle">Me contacter</h2>
+        <div class="contact-container">
+          <div>
+            <p>N'hésitez pas à me contacter si vous souhaitez en savoir plus sur mon parcours </p>
+          </div>
         <div class="contact--form">
           <!-- Formulaire de contact -->
             <form id="contactForm" method="post">
@@ -127,6 +133,8 @@
                         <!-- Div pour afficher le message -->
               <div id="formMessage"></div>
           </form>
+        </div>
+        
       </section>
     </main>
     <footer></footer>
