--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <h2 class="subtitle">Une reconversion guidée par la passion</h2>
           <article class="bio">
             <p>
-              Passionné de technologie et âgé de 33 ans, je suis actuellement en
+              Passionné de technologie et âgé de 34 ans, je suis actuellement en
               transition professionnelle vers le développement web, un domaine
               dans lequel je m’épanouis pleinement. Après avoir exploré
               différents horizons, c’est dans l’univers du code que j’ai trouvé
@@ -168,21 +168,18 @@
             <p>Je suis actuellement à la recherche :</p>
             <ul>
               <li>
-                - d’un <span class="bold">stage</span> en entreprise du
-                <span class="bold">4 août au 15 septembre 2025</span>, pour
-                mettre en pratique mes compétences dans un environnement
-                professionnel.
-              </li>
-              <li>
                 - d’une <span class="bold">alternance</span> à partir d’<span
-                  class="bold"
-                  >octobre 2025</span
+                class="bold"
+                >octobre 2025</span
                 >, dans le cadre d’une nouvelle formation menant au titre
                 professionnel de
                 <span class="bold"
-                  >Concepteur Développeur d’Applications (CDA)</span
+                >Concepteur Développeur d’Applications (CDA)</span
                 >, pour poursuivre mon évolution vers des projets plus
                 complexes.
+              </li>
+              <li>
+                - ou d'une première expérience en CDI dans une entreprise à laquelle je pourrai apporter ma motivation et ma passion et qui m'aidera à continuer à grandir dans le domaine du développement.
               </li>
             </ul>
             <p>
@@ -242,24 +239,17 @@
           <ul class="projectContainer">
             <li>
               <article class="projectCard">
-                <h3 class="projectTitle">Wild Eats</h3>
+                <h3 class="projectTitle">Wankul Pocket</h3>
                 <img
-                  src="img/wildeats.webp"
+                  src="img/wankulPocket.webp"
                   alt="illustration projet"
                   class="projectImg"
                 />
                 <p class="projectDescription">
-                  Il s'agit du premier projet d'équipe réalisé durant la
-                  formation à la Wild Code School. Le projet liste les
-                  restaurants aux abords du campus. Je me suis occupé de la
-                  gestion des données (restaurants et articles de blog), de
-                  l'injection dynamique dans le DOM, du filtrage des restaurants
-                  grâce à des boutons, du formulaire d'ajout de restaurant et
-                  des likes et commentaires sur les articles de blog, ainsi que
-                  de la gestion des pull requests et des conflits sur GitHub.
+                  Il s'agit du dernier projet d'équipe réalisé lors de ma formation à la Wild Code School. Le projet est un jeu inspiré de Pokemon TCGP mais basé sur l'univers "Wankul" créé par les youtubers Wankil Studio. J'ai beaucoup travaillé sur le backend de ce projet, j'ai également complètement développé la page collection et le système d'échanges de cartes.
                 </p>
                 <a
-                  href="https://jordan-182.github.io/lille-js-wild-eat-1/"
+                  href="https://wankulpocket.fr"
                   target="_blank"
                   class="projectLink btnReverse"
                   >Voir le projet</a
