--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <h2 class="subtitle">Une reconversion guidée par la passion</h2>
           <article class="bio">
             <p>
-              Passionné de technologie et âgé de 34 ans, je suis actuellement en
+              Passionné de technologie, je suis actuellement en
               transition professionnelle vers le développement web, un domaine
               dans lequel je m’épanouis pleinement. Après avoir exploré
               différents horizons, c’est dans l’univers du code que j’ai trouvé
@@ -168,10 +168,10 @@
             <p>Je suis actuellement à la recherche :</p>
             <ul>
               <li>
-                - d’une <span class="bold">alternance</span> à partir d’<span
+                - d’une <span class="bold">alternance</span> à partir de<span
                 class="bold"
-                >octobre 2025</span
-                >, dans le cadre d’une nouvelle formation menant au titre
+                >mars 2026</span
+                >(avec possibilité de commencer en entreprise dès janvier), dans le cadre d’une nouvelle formation menant au titre
                 professionnel de
                 <span class="bold"
                 >Concepteur Développeur d’Applications (CDA)</span
@@ -237,6 +237,25 @@
         <section class="projectSection section" id="projectSection">
           <h2 class="subtitle">Mes projets</h2>
           <ul class="projectContainer">
+            <li>
+              <article class="projectCard">
+                <h3 class="projectTitle">Giftizy</h3>
+                <img
+                  src="img/giftizy.png"
+                  alt="illustration projet"
+                  class="projectImg"
+                />
+                <p class="projectDescription">
+                  Giftizy est le dernier projet que j'ai entièrement conçu, développé et déployé seul. Le but de Giftizy est de permettre à ses utilisateurs de partager leurs listes de souhaits de manière interractive avec les proches de leur choix. Un système d'amitiés permet aux utilisateurs de contrôler qui peut voir et interragir avec leurs listes. Il est également possible de créer et gérer des évènements. 
+                </p>
+                <a
+                  href="https://giftizy.fr"
+                  target="_blank"
+                  class="projectLink btnReverse"
+                  >Voir le projet</a
+                >
+              </article>
+            </li>
             <li>
               <article class="projectCard">
                 <h3 class="projectTitle">Wankul Pocket</h3>
